[package]
name = "elgamal"
version = "0.1.0"
authors = ["iquerejeta <querejeta.inigo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "1", default-features = false, features = ["serde"] }
rand_core = { version = "0.5", default-features = false }
rand = { version = "0.6.0", default-features = true }
sha2 = "0.8.0"
clear_on_drop = { version = "0.2" }

[dev-dependencies]
criterion = "0.2"

[features]
default = ["std", "u64_backend"]
std = ["curve25519-dalek/std"]
nightly = ["curve25519-dalek/nightly", "clear_on_drop/nightly"]
u64_backend = ["curve25519-dalek/u64_backend"]