[package]
name = "elgamal_ristretto"
version = "0.1.0"
authors = ["Inigo Querejeta Azurmendi <querejeta.inigo@gmail.com>, Gonçalo Pestana <g6pestana@gmail.com>"]
edition = "2018"
exclude = ["**/.gitignore", ".gitignore"]
description = "A pure-Rust implementation of ElGamal encryption using the Ristretto group over Curve25519"
readme = "README.md"
keywords = ["cryptography", "elgamal", "additive-homomorphic"]
categories = ["cryptography", "no-std"]
repository = "https://github.com/iquerejeta/elgamal"
license = "MIT"


[dependencies]
curve25519-dalek = { version = "1", default-features = false, features = ["serde"] }
rand_core = { version = "0.5", default-features = false }
rand = { version = "0.6.0", default-features = true }
sha2 = "0.8.0"
clear_on_drop = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1"

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "elgamal-ristretto"
harness = false

[features]
default = ["std", "u64_backend"]
std = ["curve25519-dalek/std"]
nightly = ["curve25519-dalek/nightly", "clear_on_drop/nightly"]
u64_backend = ["curve25519-dalek/u64_backend"]
